--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1",
   "description": "Always know when James Young is ballin",
   "main": "index.js",
+  "scripts": {
+    "start": "nodemon node index.js",
+    "lint": "eslint --fix index.js"
+  },
   "repository": {
     "url": "https://github.com/arjunblj/james-young-alert",
     "type": "git"
@@ -14,5 +18,10 @@
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.4.1",
     "eslint-plugin-standard": "^2.0.1"
+  },
+  "dependencies": {
+    "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.17.4",
+    "node-schedule": "^1.2.0"
   }
 }
