--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon node index.js",
-    "lint": "eslint --fix index.js"
+    "lint": "eslint index.js"
   },
   "repository": {
     "url": "https://github.com/arjunblj/james-young-alert",
